<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:editTextFormExample="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/default_white"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/default_gray"
        android:gravity="right|center"
        android:padding="@dimen/app_8dp"
        android:text="@string/action_rg_tip"
        android:textColor="@color/default_block" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_40dp"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="@dimen/app_76dp"
            android:layout_height="fill_parent"
            android:gravity="right|center_vertical"
            android:padding="@dimen/app_8dp"
            android:text="@string/action_mobilenumber"
            android:textColor="@color/default_block"
            android:textSize="@dimen/app_16sp" />

        <com.andreabaccega.widget.FormEditText
            android:id="@+id/register_mobilenumber"
            style="@style/defaultEditText"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="@dimen/app_8dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/action_mobilenumber_tip"
            android:inputType="phone"
            editTextFormExample:classType="com.andreabaccega.formedittextvalidator.CellPhoneValidator"
            editTextFormExample:emptyAllowed="false"
            editTextFormExample:testErrorString="@string/error_phone_not_valid"
            editTextFormExample:testType="custom" >

            <requestFocus />
        </com.andreabaccega.widget.FormEditText>
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/app_1dp"
        android:layout_marginTop="@dimen/app_4dp"
        android:background="@color/default_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_40dp"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="@dimen/app_76dp"
            android:layout_height="fill_parent"
            android:gravity="right|center_vertical"
            android:padding="@dimen/app_8dp"
            android:text="@string/action_nickname"
            android:textColor="@color/default_block"
            android:textSize="@dimen/app_16sp" />

        <com.andreabaccega.widget.FormEditText
            android:id="@+id/register_accountname"
            style="@style/defaultEditText"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="@dimen/app_8dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/action_rg_nickname_tip"
            android:inputType="text" 
            editTextFormExample:emptyAllowed="false">
        </com.andreabaccega.widget.FormEditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_40dp"
        android:layout_marginTop="@dimen/app_4dp"
        android:background="@color/default_gray"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/register_bindmescm_txt"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="right|center"
            android:text="@string/action_rg_bindmescm"
            android:textColor="@color/default_block" />

        <CheckBox
            android:id="@+id/register_bindmescm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/register_mescmaccountid_lay"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_40dp"
        android:layout_marginBottom="@dimen/app_4dp"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="@dimen/app_76dp"
            android:layout_height="fill_parent"
            android:gravity="right|center_vertical"
            android:padding="@dimen/app_8dp"
            android:text="@string/login_account"
            android:textColor="@color/default_block"
            android:textSize="@dimen/app_16sp" />

        <com.andreabaccega.widget.FormEditText
            android:id="@+id/register_accountid"
            style="@style/defaultEditText"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="@dimen/app_8dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/action_mescm_account"
            android:inputType="text"
            editTextFormExample:emptyAllowed="false" >
        </com.andreabaccega.widget.FormEditText>
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/app_1dp"
        android:background="@color/default_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_40dp"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="@dimen/app_76dp"
            android:layout_height="fill_parent"
            android:gravity="right|center_vertical"
            android:padding="@dimen/app_8dp"
            android:text="@string/login_pswd"
            android:textColor="@color/default_block"
            android:textSize="@dimen/app_16sp" />

        <com.andreabaccega.widget.FormEditText
            android:id="@+id/register_pswd"
            style="@style/defaultEditText"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="@dimen/app_8dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword" 
            editTextFormExample:emptyAllowed="false">
        </com.andreabaccega.widget.FormEditText>
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/app_1dp"
        android:layout_marginTop="@dimen/app_4dp"
        android:background="@color/default_gray" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_8dp"
        android:background="@drawable/login_btn_switch_bg"
        android:text="@string/action_acc_reg"
        android:textColor="@color/default_custom_actionbar_textcolor"
        android:textSize="@dimen/app_18sp" />

    <Button
        android:id="@+id/register_rule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/app_8dp"
        android:layout_marginRight="@dimen/app_8dp"
        android:background="@null"
        android:text="@string/action_rg_rule"
        android:textSize="@dimen/app_13sp" />

</LinearLayout>